# jobhunter

./: .gitignore  Pipfile  README.md  Untitled.ipynb  app.py  employers.yaml  gitlab.json  models.py  pyproject.toml  requirements.txt  tasks.py  test.json  test.py  twilio.json  wikimedia.json  zapier.json
templates/: base.html  recent_jobs.html
