[tool.poetry]
name = "jobhunter"
version = "0.1.0"
description = "An application to track jobs for me"
authors = ["Matt Johnson <mjohn23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
html5lib = "^1.1"
lxml = "^4.9.3"
SQLAlchemy = "^2.0.19"
psycopg2 = "flask"
Flask = "^2.3.2"
Flask-SQLAlchemy = "^3.0.5"
PyYAML = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
